[Minor] Automated Code cleanups